--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "expo": "~47.0.12",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
+    "install": "^0.13.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-paper": "^5.1.3",
     "react-native-safe-area-context": "^4.4.1",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.6"
   },
